# cmake_init

./: .clang-format  CMakeLists.txt
.devcontainer/: devcontainer.json
src/: main.cpp  solution.hpp
test/: test_main.cpp
